tester/testsuite/bad/bad077.jl
int main() {
    a = 4;
    int a;
    return 0;
}
